[refactor]- move bff server inside src folder and fix development enviroment

--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -7,7 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -15,7 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "start:server": "cd ./client && node app.js",
+    "start:server": "node ./src/services/api-server/app.js",
+    "start:dev-server": "nodemon ./src/services/api-server/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.2"
   }
 }
