--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -22,7 +22,8 @@
     "start:dev-server": "nodemon ./src/services/api-server/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint  --fix src/**/*.js"
   },
   "eslintConfig": {
     "extends": [
